# dart-tarantool-storage

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  VERSION  build-static.sh  compile_commands.json.tmp  dart-tarantool-storage.drawio
.github/workflows/: storage.yml
binding/: .gitignore
binding/dart/: .gitignore  console  pubspec.yaml  stderr  stdout
binding/dart/lib/: tarantool_storage.dart
binding/dart/lib/storage/: batch.dart  bindings.dart  configuration.dart  constants.dart  defaults.dart  exception.dart  executor.dart  extension.dart  extensions.dart  index.dart  iterator.dart  lookup.dart  native_module.dart  schema.dart  script.dart  space.dart  storage.dart  tuple.dart  updater.dart
binding/dart/lib/storage/executor/: executor.dart  lua.dart  native.dart
binding/dart/lib/storage/schema/: batch.dart  index.dart  iterator.dart  schema.dart  space.dart  updater.dart
binding/dart/lua/: checkers.lua  extensions.lua  migrate.lua  migration.lua  reloader.lua  search.lua  storage.lua  time.lua  user.lua  version.lua
binding/dart/native/: extension.h  luaconf.h  module.h
binding/dart/test/: benchmark.dart  replica.dart  test.dart  test.lua
binding/native/: .gitignore  CMakeLists.txt  Makefile
binding/native/src/: binding_box.c  binding_box.h  binding_common.c  binding_common.h  binding_common_types.h  binding_controller.c  binding_controller.h  binding_dart_functions.c  binding_dart_functions.h  binding_executor.c  binding_executor.h
cmake/: BuildDecNumber.cmake  BuildLibCORO.cmake  BuildLibCURL.cmake  BuildLibEIO.cmake  BuildLibEV.cmake  BuildMisc.cmake  compiler.cmake  luajit.cmake  module.cmake  utils.cmake
dart/: .gitignore  analysis_options.yaml  ffigen.sh  pubspec.yaml
dart/lib/: tarantool_storage.dart
dart/lib/storage/: bindings.dart  configuration.dart  constants.dart  defaults.dart  exception.dart  executor.dart  extensions.dart  index.dart  iterator.dart  lookup.dart  lua.dart  schema.dart  serialization.dart  space.dart  storage.dart  tuple.dart  updater.dart
dart/lua/: reloader.lua  search.lua  storage.lua  user.lua
dart/native/: .gitattributes  library.h  msgpuck.h
dart/test/: benchmark.dart  replica.dart  test-replication.sh  test.dart  test.lua
native/: CMakeLists.txt
native/src/: storage_extension.h  tarantool.c  tarantool.h  tarantool_box.c  tarantool_box.h  tarantool_common.c  tarantool_common.h  tarantool_executor.c  tarantool_executor.h  tarantool_factory.c  tarantool_factory.h  tarantool_launcher.cc  tarantool_launcher.h  tarantool_tuple.c  tarantool_tuple.h
native/test/: storage_test.c  storage_test.h
src/: CMakeLists.txt  errcode.i  main.cc  main.h
src/binding/dart/native/: module.h
src/box/: CMakeLists.txt  alter.cc  applier.cc  module_cache.c  module_cache.h  txn.c
src/box/lua/: info.h
src/lib/coll/: CMakeLists.txt
src/lib/core/: CMakeLists.txt  cbus.c  fiber.c  fiber.h  fiber_channel.h
src/lib/crypto/: CMakeLists.txt
src/lib/mpstream/: CMakeLists.txt
src/lib/raft/: CMakeLists.txt
src/lib/salad/: CMakeLists.txt
src/lib/swim/: CMakeLists.txt
src/lib/uuid/: CMakeLists.txt
src/lua/: error.h  init.c  init.h
static-build/: CMakeLists.txt
